<resources>
    <string name="app_name">가천 동아리 한눈에 보자</string>
    <string name="gachon_group">가천대학교 동아리</string>
    <string name="one_see">한눈에 보자</string>
    <string name="manager">관리자</string>
    <string name="user">사용자</string>
    <string name="login">로그인</string>

    <string name="find_IDnPW">아이디/비밀번호 찾기</string>
    <string name="sign_up">회원가입</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="input_email">이메일을 입력하세요</string>
    <string name="input_code">인증번호 입력</string>
    <string name="input_id">아이디를 입력하세요</string>

    <string name="verify_code">인증번호</string>
    <string name="check_verify">인증확인</string>
    <string name="email_err_title">이메일이 오지 않았을 때</string>
    <string name="email_err_msg">이메일 서비스 제공자 사정에 의해 즉시 도착하지 않을 수 있으니, 10분정도 기다리신 후 다시 시도해주세요. 그래도 오지 않았다면 스팸함을 확인해보세요.</string>

    <string name="name">이름</string>
    <string name="ID">아이디</string>
    <string name="email">이메일 ID</string>
    <string name="major">학과</string>
    <string name="student_number">학번</string>
    <string name="group">동아리</string>
    <string name="password">비밀번호</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="check_reuse">중복확인</string>
    <string name="go_back">뒤로가기</string>

    <string-array name="majors">
        <item>학과 선택        </item>
        <item>경영학트랙</item>
        <item>글로벌경영학트랙</item>
        <item>금융수학과</item>
        <item>글로벌경제학과</item>
        <item>관광경영학과</item>
        <item>의료경영학과</item>
        <item>응용통계학과</item>
        <item>행정학과</item>
        <item>미디어커뮤니케이션학과</item>
        <item>사회복지학과</item>
        <item>유아교육학과</item>
        <item>한국어문학과</item>
        <item>영미영문학과</item>
        <item>동양어문학과</item>
        <item>유럽어문학과</item>
        <item>법학과</item>
        <item>경찰안보학과</item>
        <item>도시계획학과</item>
        <item>조경학과</item>
        <item>실내건축학과</item>
        <item>건축학과(5년)</item>
        <item>건축공학과(4년)</item>
        <item>설비소방공학과</item>
        <item>전기공학과</item>
        <item>화공생명공학과</item>
        <item>기계공학과</item>
        <item>토목환경공학과</item>
        <item>토목환경공학과(야)</item>
        <item>산업경영공학과</item>
        <item>바이오나노학과</item>
        <item>생명과학과</item>
        <item>식품영향학과</item>
        <item>나노물리학과</item>
        <item>나노화학과</item>
        <item>식품생물공학과</item>
        <item>소프트웨어학과</item>
        <item>컴퓨터공학과</item>
        <item>전자공학과</item>
        <item>신소재공학과</item>
        <item>한의예과</item>
        <item>한의학과</item>
        <item>회화조소</item>
        <item>디자인</item>
        <item>패션디자인</item>
        <item>성악과</item>
        <item>기악과</item>
        <item>작곡과</item>
        <item>체육학과</item>
        <item>태권도학과</item>
        <item>연기예술학과</item>
        <item>자유전공(인문)</item>
        <item>간호학과</item>
        <item>의용생체공학과</item>
        <item>치위생학과</item>
        <item>응급구조학과</item>
        <item>방사선학과</item>
        <item>물리치료학과</item>
        <item>운동재활복지학과</item>
        <item>약학과</item>
        <item>의예과</item>
        <item>의학과</item>
        <item>기타</item>
    </string-array>

    <string-array name="groups">
        <item>동아리 선택</item>
        <item>섹션</item>
        <item>\@pplay</item>
        <item>파랑새</item>
        <item>EPU</item>
        <item>동아리 없음</item>
    </string-array>

    <string-array name="domain">
        <item>글로벌</item>
        <item>메디컬</item>
    </string-array>

    <string name="group_list">동아리 목록</string>
    <string name="pr_list">홍보게시판</string>
    <string name="federation_notice">연합회 공지사항</string>
    <string name="QnA">Q&amp;A</string>

    <string name="acadmeic">학술</string>
    <string name="music">음악</string>
    <string name="religion">종교</string>
    <string name="athletic">체육</string>
    <string name="performance">공연</string>
    <string name="social_science">사회과학</string>
    <string name="exhibition">전시창작</string>
    <string name="volunteer">취미봉사</string>
    <string name="group_pr">소개글</string>
    <string name="request">신청</string>
    <string name="info_board">정보게시판</string>
    <string name="group_schedule">동아리 일정</string>

    <string name="requset_log">동아리 신청 내역</string>
    <string name="my_group">내 동아리 바로가기</string>
    <string name="my_group_schedule">내 동아리 일정 보기</string>
    <string name="requirement">문의사항</string>
    <string name="service_legal">서비스 약관</string>
    <string name="current_version">현재 버전 1.0</string>
    <string name="out">회원탈퇴</string>
    <string name="edit_my_information">회원정보 수정</string>
    <string name="edit">수정하기</string>
    <string name="schedule">일정</string>
    <string name="no_schedule">일정이 없습니다</string>
    <string name="enrollment">등록하기</string>
    <string name="search">검색하기</string>
    <string name="previous">&lt;prev</string>
    <string name="next">next&gt;</string>
    <string name="report">신고</string>
    <string name="title">제목</string>
    <string name="send">보내기</string>
    <string name="input_reply">댓글을 입력해 주세요</string>
    <string name="commit">등록</string>
    <string name="tmpCommit">임시저장</string>
    <string name="accuse">신고하기</string>
    <string name="accuse1">욕설/비하</string>
    <string name="accuse2">유출/사칭/사기</string>
    <string name="accuse3">낚시/놀림/도배</string>
    <string name="accuse4">상업적 광고 및 판매</string>
    <string name="accuse5">음란물/불건전한 내용</string>
    <string name="accuse6">게시판 성격에 부적적함</string>
    <string name="etc">기타</string>
    <string name="contact">연락처</string>
    <string name="age">나이</string>
    <string name="able_time">가능한 시간</string>
    <string name="self_introduce">자기소개</string>
    <string name="input_content">내용을 입력해 주세요</string>
    <string name="do_request">신청하기</string>
    <string name="join_request_log">동아리 신청 내역</string>
    <string name="remove">삭제하기</string>
    <string name="app_version">애플리케이션 버전</string>
    <string name="check_last_version">최신버전을 확인중입니다</string>
    <string name="download_last">최신버전 다운받기</string>
    <string name="login_plz_wait">로그인 중입니다\n잠시만 기다려주세요</string>
    <string name="public_notice">공지사항</string>
</resources>
