<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/myInfoBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_preference" />
    </RelativeLayout>


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tab_1"
                android:paddingHorizontal="5dp"
                android:paddingVertical="20dp"
                android:text="@string/group_list"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/PRboardBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tab_btn"
                android:paddingHorizontal="5dp"
                android:paddingVertical="20dp"
                android:text="@string/pr_list"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/federation_noticeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tab_btn"
                android:paddingHorizontal="5dp"
                android:paddingVertical="20dp"
                android:text="@string/federation_notice"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/QnABtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tab_btn"
                android:paddingHorizontal="5dp"
                android:paddingVertical="20dp"
                android:text="@string/QnA"
                android:textSize="16sp" />
        </LinearLayout>

    </HorizontalScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/academicBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_list"
                android:paddingVertical="10dp"
                android:text="@string/acadmeic"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/musicBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_list"
                android:paddingVertical="10dp"
                android:text="@string/music"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/religionBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_list"
                android:paddingVertical="10dp"
                android:text="@string/religion"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/athleticBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_list"
                android:paddingVertical="10dp"
                android:text="@string/athletic"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/performanceBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_list"
                android:paddingVertical="10dp"
                android:text="@string/performance"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/social_scienceBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_list"
                android:paddingVertical="10dp"
                android:text="@string/social_science"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/exhibitionBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_list"
                android:paddingVertical="10dp"
                android:text="@string/exhibition"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/volunteerBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_list"
                android:paddingVertical="10dp"
                android:text="@string/volunteer"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>