<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroupMenuActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#FFFFFF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="동아리 이름"
            android:textColor="#000000"
            android:textSize="22sp" />

        <Button
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/back"
            android:onClick="back" />

        <View
            android:layout_below="@id/titleTV"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />
    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/introduceBtn"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/btn_rhombus_gray"
            android:text="@string/group_pr"
            android:textSize="20sp" />

        <Button
            android:id="@+id/groupJoinBtn"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="-70dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/btn_rhombus_purple"
            android:text="@string/request"
            android:textSize="20sp" />

        <Button
            android:id="@+id/informationBtn"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="-70dp"
            android:background="@drawable/btn_rhombus_gray"
            android:text="@string/info_board"
            android:textSize="20sp" />

        <Button
            android:id="@+id/groupScheduleBtn"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="-70dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/btn_rhombus_purple"
            android:text="@string/group_schedule"
            android:textSize="20sp" />

        <Button
            android:layout_marginTop="-70dp"
            android:layout_marginLeft="40dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/QnA"
            android:textSize="20sp"
            android:background="@drawable/btn_rhombus_gray"/>
        </LinearLayout>


</LinearLayout>