<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PRBoardActivity"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pr_list"
            android:textColor="#000000"
            android:textSize="25sp"
            android:layout_margin="20dp"/>

        <Button
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/back"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            />

        <View
            android:layout_below="@id/Group_name"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/nextNprev"
        android:layout_below="@id/title"
        android:layout_marginBottom="20dp">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/nextNprev"
        android:layout_above="@id/searchNenroll"
        android:layout_marginBottom="20dp"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prevBtn"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="3"
            android:background="@drawable/btn_gray_round"
            android:text="@string/previous"
            android:textColor="#bdbdbd"
            android:textSize="16sp"
            android:textStyle="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="2" />

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:layout_weight="3"
            android:background="@drawable/btn_gray_round"
            android:text="@string/next"
            android:textColor="#bdbdbd"
            android:textSize="16sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchNenroll"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp">

        <Button
            android:layout_marginLeft="80dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/btn_color"
            android:text="@string/enrollment"
            android:textColor="#FFFFFF"
            android:textSize="16sp"/>

        <Button
            android:layout_marginLeft="20dp"
            android:layout_marginRight="80dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/btn_normal_gray"
            android:text="@string/search"
            android:textColor="#FFFFFF"
            android:textSize="16sp"/>
    </LinearLayout>
</RelativeLayout>